Added dim calendar, updates to payment & income

--- a/locations.yml
+++ b/locations.yml
@@ -1,6 +1,7 @@
 defaultStorageMapping: NETSUITE_RAW
 fileVersion: 1
 locations:
+  - CALENDARS_FOR_FINANCE_AND_ANALYTICS
   - NETSUITE_PREPARED
   - NETSUITE_RAW
   - OPERATIONS_MODEL_PREPARED
