--- a/environments/Production-2.yml
+++ b/environments/Production-2.yml
@@ -1,6 +1,9 @@
 fileVersion: 1
 id: "2"
 mappingDefinitions:
+  CALENDARS_FOR_FINANCE_AND_ANALYTICS:
+    database: CALENDARS_FOR_FINANCE_AND_ANALYTICS
+    schema: PUBLIC
   NETSUITE_PREPARED:
     database: PINSLY_PREPARED_PROD
     schema: NETSUITE_PREPARED
