--- a/nodes/NETSUITE_PREPARED-STG_DIM_CALENDAR.yml
+++ b/nodes/NETSUITE_PREPARED-STG_DIM_CALENDAR.yml
@@ -15,7 +15,12 @@ operation:
   locationName: NETSUITE_PREPARED
   materializationType: table
   metadata:
-    appliedNodeTests: []
+    appliedNodeTests:
+      - continueOnFailure: true
+        description: ""
+        name: Test
+        runOrder: After
+        templateString: ""
     columns:
       - appliedColumnTests: {}
         columnReference:
@@ -301,22 +306,22 @@ operation:
     enabledColumnTestIDs: []
     sourceMapping:
       - aliases:
-          STG_ACCOUNTINGPERIOD: 91fe1256-4ad3-4776-b83e-44d531024ebd
           STG_V_CALENDAR_DIM: 1a80df02-f722-4247-9763-b5e07292c34c
         customSQL:
           customSQL: ""
         dependencies:
-          - locationName: NETSUITE_RAW
+          - locationName: NETSUITE_PREPARED
             nodeName: STG_ACCOUNTINGPERIOD
-          - locationName: NETSUITE_RAW
+          - locationName: NETSUITE_PREPARED
             nodeName: STG_V_CALENDAR_DIM
         join:
           joinCondition: |-
-            FROM {{ ref('NETSUITE_RAW', 'STG_V_CALENDAR_DIM') }} "STG_V_CALENDAR_DIM" 
-            LEFT JOIN{{ ref('NETSUITE_RAW', 'STG_ACCOUNTINGPERIOD') }} "STG_ACCOUNTINGPERIOD"
+            FROM {{ ref('NETSUITE_PREPARED', 'STG_V_CALENDAR_DIM') }} "STG_V_CALENDAR_DIM" 
+            LEFT JOIN{{ ref('NETSUITE_PREPARED', 'STG_ACCOUNTINGPERIOD') }} "STG_ACCOUNTINGPERIOD"
             ON  "STG_V_CALENDAR_DIM"."DATE_AT" BETWEEN DATE("STG_ACCOUNTINGPERIOD"."STARTDATE") AND DATE("STG_ACCOUNTINGPERIOD"."ENDDATE")
             WHERE "STG_ACCOUNTINGPERIOD"."ISQUARTER" = 'F'
                 AND "STG_ACCOUNTINGPERIOD"."ISYEAR" = 'F'
+                AND "STG_ACCOUNTINGPERIOD"."PERIODNAME" NOT LIKE '%Adjust%'
         name: STG_DIM_CALENDAR
         noLinkRefs: []
   name: STG_DIM_CALENDAR
