--- a/nodes/NETSUITE_PREPARED-STG_V_CALENDAR_DIM.yml
+++ b/nodes/NETSUITE_PREPARED-STG_V_CALENDAR_DIM.yml
@@ -12,7 +12,7 @@ operation:
   deployEnabled: true
   description: ""
   isMultisource: false
-  locationName: NETSUITE_RAW
+  locationName: NETSUITE_PREPARED
   materializationType: table
   metadata:
     appliedNodeTests: []
