[Mappings]: Updated Environment Mapping for Wabtec pre branching for week of 11/18

--- a/environments/Production-2.yml
+++ b/environments/Production-2.yml
@@ -23,7 +23,7 @@ mappingDefinitions:
     database: PINSLY_PREPARED_PROD
     schema: WABTEC_PREPARED
   WABTEC_RAW:
-    database: PINSLY_RAW
-    schema: PUBLIC
+    database: PINSLY_RAW_DEV
+    schema: WABTEC
 name: Production
 type: Environment
