--- a/nodes/NETSUITE_PREPARED-STG_DIM_CALENDAR.yml
+++ b/nodes/NETSUITE_PREPARED-STG_DIM_CALENDAR.yml
@@ -15,12 +15,7 @@ operation:
   locationName: NETSUITE_PREPARED
   materializationType: table
   metadata:
-    appliedNodeTests:
-      - continueOnFailure: true
-        description: ""
-        name: Test
-        runOrder: After
-        templateString: ""
+    appliedNodeTests: []
     columns:
       - appliedColumnTests: {}
         columnReference:
