[Development]: updated business keys

--- a/nodes/NETSUITE_PREPARED-DIM_CALENDAR.yml
+++ b/nodes/NETSUITE_PREPARED-DIM_CALENDAR.yml
@@ -165,6 +165,7 @@ operation:
         config: {}
         dataType: DATE
         description: ""
+        isBusinessKey: true
         name: DATE
         nullable: true
         sourceColumnReferences:
