--- a/nodes/NETSUITE_PREPARED-DIM_CUSTOMER.yml
+++ b/nodes/NETSUITE_PREPARED-DIM_CUSTOMER.yml
@@ -263,6 +263,7 @@ operation:
         config: {}
         dataType: NUMBER(38,0)
         description: ""
+        isBusinessKey: true
         name: ENTITY_ID
         nullable: false
         sourceColumnReferences:
