--- a/nodes/NETSUITE_PREPARED-FCT_AR_INVOICE_PAYMENT_UNION_SUM.yml
+++ b/nodes/NETSUITE_PREPARED-FCT_AR_INVOICE_PAYMENT_UNION_SUM.yml
@@ -22,6 +22,7 @@ operation:
         config: {}
         dataType: NUMBER(38,0)
         description: ""
+        isBusinessKey: true
         name: TRANSACTION_ID
         nullable: false
         sourceColumnReferences:
