--- a/environments/Production-2.yml
+++ b/environments/Production-2.yml
@@ -9,7 +9,7 @@ mappingDefinitions:
     schema: NETSUITE_PREPARED
   NETSUITE_RAW:
     database: PINSLY_RAW
-    schema: PUBLIC
+    schema: NETSUITE_SUITEANALYTICS
   OPERATIONS_MODEL_PREPARED:
     database: PINSLY_PREPARED_PROD
     schema: OPERATIONS_MODEL_PREPARED
